tests/invalid/vararg_not_last.lang
module main

func variadic(args ...i32, a i32) {

}
